--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,8 @@ nav.mobile-menu ul{
     bottom: -190px;
     width: 100%;
     background-color: white;
+    padding: 0;
+    margin: 0;
 }
 
 header.fixed-header nav.mobile-menu ul{
@@ -811,6 +813,19 @@ footer{
 
     header{
         padding: 10px 0;
+    }
+
+    nav.mobile-menu ul{
+        display: none;
+        position: absolute;
+        left: 0px;
+        bottom: -190px;
+        width: 100%;
+        background-color: white;
+    }
+    
+    header.fixed-header nav.mobile-menu ul{
+        bottom: -236px;
     }
     .__section-6 .list-item div{
         padding-bottom: 0.5rem;
